fix: prevent new group page overflow, width was not properly updated

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -173,7 +173,7 @@ button {
 
 .newgroup {
   height: 100vh;
-  width: 80vw;
+  width: min(80vw, calc(95vw - 320px));
   position: relative;
   display: flex;
   flex-direction: column;
